# nonebot-plugin-cyberfurry

./: README.md  pyproject.toml
nonebot_plugin_cyberfurry/: __init__.py  callapi.py  config.py  cyberauto.py  cyberfurry.py  cyberfurrymodel.py  cyberhistory.py  cyberinit.py  cyberlife.py  data_source.py  jsondata.py  jsonprompt.py  plugins_data.py  systemprompt.json
